up scores of web performance: all green

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
   <meta name="robots" content="index, follow">
   <meta name="og:title" property="og:title" content="Hyperfantasy Design Studio">
   <meta name="description" content="Hyperfantasy Design Studio">
+  <meta http-equiv="Cache-control" content="public">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
 <body>
   <div id="container" class="container">
-    <img id="main-logo" src="./assets/styles/images/logo_mark_hyperfantasy.png" alt="Image Content - Logo -  HyperFantasy" />
+    <img id="main-logo" src="./assets/styles/images/logo_mark_hyperfantasy.png" alt="Image Content - Logo -  HyperFantasy" width="254" height="239"/>
     <h1>
       We are building.
     </h1>
