--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,7 @@
       }
       #main-logo {
         width: 150px;
+        height: auto;
       }
     }
     @media only screen and (max-width: 375px) {
