--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
       <a class="cta" href="mailto:hello.hyperfantasy@gmail.com">Send us an email!</a>
     </div>
     <div class="section section-flex">
-      <a class="icon-link" href="https://dribbble.com/hyperfantasy"><span class="icon" id="icon-dribbble"></span><span class="icon-text">hyperfantasy</span></a>
-      <a class="icon-link" href="https://www.instagram.com/hyperfantasy.creative"><span class="icon" id="icon-instagram"></span><span class="icon-text">hyperfantasy.creative</span></a>
+      <a class="icon-link" href="https://dribbble.com/hyperfantasy" alt="Dribbble" aria-label="Dribbble"><span class="icon" id="icon-dribbble"></span><span class="icon-text">hyperfantasy</span></a>
+      <a class="icon-link" href="https://www.instagram.com/hyperfantasy.creative" alt="Instagram" aria-label="Instagram"><span class="icon" id="icon-instagram"></span><span class="icon-text">hyperfantasy.creative</span></a>
     </div>
 
   <footer>
